# esp32-weather-station

./: README.md
httpServer/: .clang-format  .gitignore  config.json  meson.build
httpServer/include/: dataRecordController.hpp  helloController.hpp  jsonRecorder.hpp
httpServer/src/: dataRecordController.cpp  helloController.cpp  main.cpp
httpServer/subprojects/: drogon.wrap
weather-station/: average-value.hpp  segmentDisplay.hpp  tempHumidSensor.cpp  tempHumidSensor.hpp  weather-station.ino
